Update twitter's icon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -173,7 +174,7 @@
                     <div class="4u 12u(mobile)">
                         <section class="box style1">
                             <a href="https://twitter.com/PythonMilano">
-                                <span class="icon featured fa-twitter"></span>
+                                <span class="icon featured fa-brands fa-x-twitter"></span>
                                 <h3>Twitter</h3>
                             </a>
                         </section>
